src/test/ui/derives/derives-span-Default-struct.stderr
error[E0277]: the trait bound `Error: std::default::Default` is not satisfied
  --> $DIR/derives-span-Default-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ the trait `std::default::Default` is not implemented for `Error`
   |
   = note: required by `std::default::Default::default`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
